updated layers of members-checkout-delivery-confirm

--- a/src/members-checkout-delivery-confirm.html
+++ b/src/members-checkout-delivery-confirm.html
@@ -48,12 +48,15 @@
 										<option>Miss</option>
 										<option>Ms</option>
 									</select>
+									<div class="clear"></div>
 									<p class="error"> Please enter a first name</p>
 									<label for="add-delivery-first-name">First Name*</label>
 									<input id="add-delivery-first-name" type="text" name="register-first-name" maxlength="60" />
+									<div class="clear"></div>
 									<p class="error"> Please enter a last name</p>
 									<label for="add-delivery-last-name">Last Name*</label>
 									<input id="add-delivery-last-name" type="text" name="register-last-name" maxlength="60" />
+									<div class="clear"></div>
 									<p class="error">Please select a country</p>
 									<label for="add-choose-country">Country*</label>
 									<select id="add-choose-country" name="register-choose-country">
@@ -306,24 +309,32 @@
 										<option value="Zambia">Zambia</option>
 										<option value="Zimbabwe">Zimbabwe</option>
 									</select>
+									<div class="clear"></div>
 									<label for="add-delivery-company-name">Company Name</label>
 									<input id="add-delivery-company-name" type="text" name="register-company-name" maxlength="40" />
+									<div class="clear"></div>
 									<p class="error">Please enter the first line of your address</p>
 									<label for="add-delivery-address-line1">Address Line 1*</label>
 									<input id="add-delivery-address-line1" type="text" name="register-address-line1" maxlength="60" />
+									<div class="clear"></div>
 									<label for="add-delivery-address-line2">Address Line 2</label>
 									<input id="add-delivery-address-line2" type="text" name="register-address-line2" maxlength="60" />
+									<div class="clear"></div>
 									<label for="add-delivery-address-line3">Address Line 3</label>
 									<input id="add-delivery-address-line3" type="text" name="register-address-line3" maxlength="60" />
+									<div class="clear"></div>
 									<p class="error">Please enter a town or city </p>
 									<label for="add-delivery-town">Town/City*</label>
 									<input id="add-delivery-town" type="text" name="register-town" maxlength="50" />
+									<div class="clear"></div>
 									<p class="error">Please enter a county/state</p>
 									<label for="add-delivery-county">County*</label>
 									<input id="add-delivery-county" type="text" name="register-address-county" maxlength="50" />
+									<div class="clear"></div>
 									<p class="error">Please type in a postcode/zip code</p>
 									<label for="add-delivery-postcode">Postcode*</label>
 									<input id="add-delivery-postcode" type="text" name="register-address-postcode" maxlength="10" />
+									<div class="clear"></div>
 									<button class="yellow-button-wide">Add address</button>
 								</form>
 							</div>
@@ -342,12 +353,15 @@
 										<option>Miss</option>
 										<option>Ms</option>
 									</select>
+									<div class="clear"></div>
 									<p class="error"> Please enter a first name</p>
 									<label for="edit-delivery-first-name">First Name*</label>
 									<input id="edit-delivery-first-name" type="text" name="register-first-name" maxlength="60" />
+									<div class="clear"></div>
 									<p class="error"> Please enter a last name</p>
 									<label for="edit-delivery-last-name">Last Name*</label>
 									<input id="edit-delivery-last-name" type="text" name="register-last-name" maxlength="60" />
+									<div class="clear"></div>
 									<p class="error">Please select a country</p>
 									<label for="edit-choose-country">Country*</label>
 									<select id="edit-choose-country" name="register-choose-country">
@@ -600,24 +614,32 @@
 										<option value="Zambia">Zambia</option>
 										<option value="Zimbabwe">Zimbabwe</option>
 									</select>
+									<div class="clear"></div>
 									<label for="edit-delivery-company-name">Company Name</label>
 									<input id="edit-delivery-company-name" type="text" name="register-company-name" maxlength="40" />
+									<div class="clear"></div>
 									<p class="error">Please enter the first line of your address</p>
 									<label for="edit-delivery-address-line1">Address Line 1*</label>
 									<input id="edit-delivery-address-line1" type="text" name="register-address-line1" maxlength="60" />
+									<div class="clear"></div>
 									<label for="edit-delivery-address-line2">Address Line 2</label>
 									<input id="edit-delivery-address-line2" type="text" name="register-address-line2" maxlength="60" />
+									<div class="clear"></div>
 									<label for="edit-delivery-address-line3">Address Line 3</label>
 									<input id="edit-delivery-address-line3" type="text" name="register-address-line3" maxlength="60" />
+									<div class="clear"></div>
 									<p class="error">Please enter a town or city </p>
 									<label for="edit-delivery-town">Town/City*</label>
 									<input id="edit-delivery-town" type="text" name="register-town" maxlength="50" />
+									<div class="clear"></div>
 									<p class="error">Please enter a county/state</p>
 									<label for="edit-delivery-county">County*</label>
 									<input id="edit-delivery-county" type="text" name="register-address-county" maxlength="50" />
+									<div class="clear"></div>
 									<p class="error">Please type in a postcode/zip code</p>
 									<label for="edit-delivery-postcode">Postcode*</label>
 									<input id="edit-delivery-postcode" type="text" name="register-address-postcode" maxlength="10" />
+									<div class="clear"></div>
 									<button class="yellow-button-wide">Add address</button>
 								</form>
 							</div>
